--- a/UI/index.html
+++ b/UI/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>ui</title>
+    <title>block painting</title>
 </head>
 <body>
 <script src="https://code.createjs.com/1.0.0/easeljs.min.js"></script>
